Change version of compiler target & source